--- a/AnimeTube_Linux/Views/Shared/_Layout.cshtml
+++ b/AnimeTube_Linux/Views/Shared/_Layout.cshtml
@@ -20,6 +20,8 @@
     <script language="JavaScript" type="text/javascript" src="~/lib/jquery/dist/jquery.min.js"></script>
     <link rel="stylesheet" href="~/css/site.css" />
     <link rel="stylesheet" href="~/css/animetube.css" />
+
+    @RenderSection("Styles", required: false)
 </head>
 <body>
     <header>
